--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
   - mv deps_cached deps
   - (ls -lah deps/; ls -lah bin/; ls -lah lib/; ls -lah include/) || true
   - |
-    if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+    if [[ "$TRAVIS_OS_NAME" == "linux" ]] && [[ "$TRAVIS_BRANCH" != "autodocker" ]]; then
       sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
       ls /etc/apt/sources.list.d
       sudo rm /etc/apt/sources.list.d/google-chrome.list
@@ -28,7 +28,7 @@ before_install:
       gcc --version && g++ --version
     fi
   - |
-    if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+    if [[ "$TRAVIS_OS_NAME" == "osx" ]] && [[ "$TRAVIS_BRANCH" != "autodocker" ]]; then
       brew tap homebrew/science
       brew tap homebrew/versions
       brew update
@@ -45,13 +45,12 @@ before_install:
       ln -sf `which g++-4.9` ./bin/g++
       ln -sf `which gcc-4.9` ./bin/gcc
      fi
-  - python ./configure.py
-  - source ./source_me.sh
+  - if [[ "$TRAVIS_BRANCH" != "autodocker" ]]; then python ./configure.py && source ./source_me.sh; fi
 install:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]] && [[ "$TRAVIS_BRANCH_NAME" != "autodocker" ]]; then make get-deps; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]] && [[ "$TRAVIS_BRANCH" != "autodocker" ]]; then make get-deps; fi
 script:
   - |
-    if [[ "$TRAVIS_BRANCH_NAME" != "autodocker" ]]; then
+    if [[ "$TRAVIS_BRANCH" != "autodocker" ]]; then
       case "$TRAVIS_OS_NAME" in
         linux )
           make -j4 && make test && make static -j4
